--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,53 +12,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:foregroundGravity="center">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/strDrinkThumb"
-                android:layout_width="256dp"
-                android:layout_height="256dp"
-                android:layout_marginTop="32dp"
-                android:contentDescription="TODO"
-                app:srcCompat="@android:drawable/ic_menu_gallery"></ImageView>
-
-            <ProgressBar
-                android:id="@+id/imageProgressBar"
-                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:max="100"
-                android:progress="50" />
-            <TextView
-                android:text="@string/empty"
-                android:id="@+id/idDrink"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-            <TextView
-                android:text="@string/empty"
-                android:id="@+id/strDrink"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-            <TextView
-                android:text="@string/empty"
-                android:id="@+id/strCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
-            <TextView
-                android:text="@string/empty"
-                android:id="@+id/strAlcoholic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
+            <include
+                android:id="@+id/layoutProgress"
+                layout="@layout/progress_layout" />
+            <include
+                android:id="@+id/layoutSuccess"
+                android:visibility="gone"
+                layout="@layout/success_layout"/>
+            <include
+                android:id="@+id/layoutResend"
+                android:visibility="gone"
+                layout="@layout/resend_layout"/>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
